--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -1,15 +1,17 @@
 {
   "name": "frontend-react",
   "version": "0.1.0",
+  "engines": {
+    "node": "8.11.3"
+  },
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "15.5.4",
+    "react-dom": "15.5.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
   },
-  "proxy": "http://backend:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
