--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "react": "15.5.4",
-    "react-dom": "15.5.4"
+    "react-dom": "15.5.4",
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
